<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_myContacts"
            android:icon="@drawable/contacts"
            android:title="@string/menu_myContacts" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings"/>
        <item
            android:id="@+id/nav_theme"
            android:icon="@drawable/theme"
            android:title="@string/menu_theme"/>
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/menu_help"/>
        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/about_us"
            android:title="@string/menu_aboutUs"/>
    </group>
</menu>