<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ThemeFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <include
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        layout="@layout/app_bar_main" />

    <TextView
            android:id="@+id/reset_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/reset_password"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:layout_marginTop="100dp"
            android:textStyle="bold"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="100dp"
            android:hint="New Password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="30dp"
            android:hint="@string/confirm_password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginEnd="60dp"
            android:text="@string/submit"
            android:background="@drawable/button_background"/>

</LinearLayout>
