<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ThemeFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <include
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        layout="@layout/app_bar_main" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/theme_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/menu_theme"
                android:textSize="50sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/BrightnessControl"
                android:layout_marginLeft="5dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/seekBar_brightness"
                android:progress="0"
                android:max="100"
                android:layout_marginTop="20dp"
                android:indeterminate="false"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="25dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="30dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="40"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="35dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="60"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="40dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="80"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="45dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="50dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/theme_font"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theme_font"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="A"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="5dp"/>
                    <SeekBar
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/seekBar_font_size"
                        android:layout_marginTop="35dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:indeterminate="false">
                    </SeekBar>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="A"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="5dp"
                        android:textSize="30dp"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theme_text"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/theme_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theme_mode"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/theme_dark_mode"
                        android:textColor="@color/black"
                        android:layout_marginTop="20dp"/>
                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="250dp"
                        android:layout_marginTop="20dp"
                        android:id="@+id/theme_switch_dark_mode" />
                </LinearLayout>

            </LinearLayout>



        </LinearLayout>


    </ScrollView>


</LinearLayout>